--- a/WorstOffAutocallablePayoffPy.ipynb
+++ b/WorstOffAutocallablePayoffPy.ipynb
@@ -9,14 +9,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pixiedust database opened successfully\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div style=\"margin:10px\">\n",
+       "            <a href=\"https://github.com/ibm-watson-data-lab/pixiedust\" target=\"_new\">\n",
+       "                <img src=\"https://github.com/ibm-watson-data-lab/pixiedust/raw/master/docs/_static/pd_icon32.png\" style=\"float:left;margin-right:10px\"/>\n",
+       "            </a>\n",
+       "            <span>Pixiedust version 1.1.17</span>\n",
+       "        </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import scipy.io as spio\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
+    "import pixiedust\n",
+    "import inspect\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "mat = spio.loadmat('./data/WorstOffAutocallablePayoff_inputs.mat', squeeze_me=True)"
    ]
   },
@@ -30,11 +70,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def worst_off_autocallable_payoff(para_prod, risk_factor, barrier_factor,num_coupon_fix,num_sim):\n",
-    "    \n",
+    "    import numpy as np\n",
+    "\n",
     "    # Index Calculation\n",
     "    # 'rf1' is obtained from the 3-d tensor 'risk_factor' \n",
     "    # by using all its slices except the first one (risk_factor[:,:,[0]]) \n",
@@ -127,9 +170,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "pixiedust": {
+     "displayParams": {}
+    },
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
+    "#%%pixie_debugger\n",
     "Payoff, CouponFix = worst_off_autocallable_payoff(mat['ParaProd'], mat[\"RiskFactor\"], mat[\"BarrierFactor\"], mat[\"NumCouponFix\"], mat[\"NumSim\"])\n",
     "Payoff = pd.DataFrame(Payoff)\n",
     "CouponFix = pd.DataFrame(CouponFix)"
@@ -146,8 +196,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "MatPayoff = pd.read_csv('data/Payoff.csv', header=None)\n",
@@ -163,8 +215,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "assert np.isclose(Payoff,MatPayoff).all()\n",
@@ -180,8 +234,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "payoff_diff = ((Payoff - MatPayoff) / MatPayoff).round(15)\n",
@@ -199,26 +255,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
-    "scrolled": true
+    "collapsed": true,
+    "scrolled": false
    },
+   "outputs": [],
+   "source": [
+    "res=pd.DataFrame(np.transpose([Payoff.iloc[:,-1], MatPayoff.iloc[:,-1], payoff_diff.iloc[:,-1].abs()]), columns=[\"Payoff Python\", \"Payoff Matlab\", \"Differences\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -675,7 +741,7 @@
     }
    ],
    "source": [
-    "pd.DataFrame(np.transpose([Payoff.iloc[:,-1], MatPayoff.iloc[:,-1], payoff_diff.iloc[:,-1].abs()]), columns=[\"Payoff Python\", \"Payoff Matlab\", \"Differences\"])"
+    "res"
    ]
   }
  ],
@@ -695,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
